was able to get the design down for the recentlyAddedContainer will add the rest of the components later

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  --Primary: #272727;
+}
+
+.isaac-bg {
+  background-color: var(--Primary);
+}
